@@ -1,27 +1,0 @@
-<%
-t_tag_spec = Array.new
-if @passwd
-    t_tag_spec.push('PASSWD')
-else
-    t_tag_spec.push('NOPASSWD')
-end
-
-if @doexec
-    t_tag_spec.push('EXEC')
-else
-    t_tag_spec.push('NOEXEC')
-end
-
-if ['RedHat','CentOS','OracleLinux','Rocky'].include?(@facts['operatingsystem'])
-  if @setenv
-    t_tag_spec.push('SETENV')
-  else
-    t_tag_spec.push('NOSETENV')
-  end
-end
-
-opts = Array.new
-@options.each do |k,v|
-  opts.push("#{k.upcase}=#{v}")
-end -%>
-<%= Array(@user_list).join(', ') %>    <%= Array(@host_list).join(', ') %>=(<%= Array(@_runas).join(', ') %>) <%= opts.join(" ") %> <%= t_tag_spec.join(':') %>: <%= Array(@cmnd).join(', ') %>
