@@ -1,3 +1,11 @@
+* Tue Sep 26 2023 Steven Pritchard <steve@sicura.us> - 5.7.0
+- Add AlmaLinux 8 support
+- Add Puppet 8 support
+- Drop Puppet 6 support
+- Update module dependencies
+- Convert ERB templates to EPP
+- Misc. minor cleanup
+
 * Mon Jul 24 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.6.0
 - Add RockyLinux 8 support
 
